recursion.lessons.recursion.koch.Crab.scala.error
Crab:9: error: Invalid literal number
	droite(45Math.sqrt(2));
               ^Crab:12: error: ')' expected but '}' found.
}
^