recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
	if (levels < 0) {
		return;
	}
	recule(length);
	droite(45);
	recule(length);
	droite(45Math.sqrt(2));
	recule(length);
	crab(levels-1,length/Math.sqrt(2));
}
